# rl_code

./: Cargo.toml  readme.md
configs/continuous/: dqn_improved.toml  dqn_naive.toml  evo_0.toml  evo_pos_obs_rand.toml  evo_pos_obs_rand_progressive.toml  evo_pos_obs_rand_progressive_test.toml  evo_pos_obs_rand_test.toml  evo_pos_rand.toml  evo_pos_rand_test.toml  ppo_0.toml
configs/discrete/: dq_train.toml  empty_grid.toml  tabular_maze.toml  tabular_reward.toml  tabular_test.toml  tabular_train.toml
configs/entorn1/: config_1a.toml  config_1b.toml  config_2.toml  config_3.toml  config_4.toml  config_hyperparams.toml  config_maze.toml  config_reward.toml
configs/entorn2/: config_1a copy.toml  config_1a.toml  config_1b.toml  config_1c.toml  config_2b.toml  config_2c.toml  ppo_0.toml
configs/graella/: dq_test.toml  dq_train.toml  empty_grid.toml  tabular_hyperparams.toml  tabular_maze.toml  tabular_test.toml
configs/pla/: dqn_improved.toml  dqn_naive.toml  ppo_0.toml
src/: continuous_2d.rs  discrete_2d.rs  main.rs
src/rl/: mod.rs
src/rl/algorithms/: deep_q_learning.rs  evolutionary.rs  mod.rs  ppo.rs  prelude.rs  simple_nn.rs  tabular_q_learning.rs  tch_wrapper.rs
src/rl/environments/: continuous_2d.rs  discrete_2d.rs  mod.rs  prelude.rs  rapier_simulation.rs
src/rl/utils/: cli.rs  mod.rs  plots.rs  prelude.rs  statistics.rs
